apply css selector to ensure the blog is readable on mobile phones

--- a/css/index.css
+++ b/css/index.css
@@ -385,3 +385,9 @@ input:focus {
     margin: 10px 0 0 0;
   }
 }
+
+@media (max-width: 600px) {
+  body {
+    padding: 1.5rem; /* More padding for larger screens */
+  }
+}
